[package]
name = "aurum"
version = "0.1.0"
authors = ["Arjun Shukla <arjunlalshukla@gmail.com>"]
edition = "2018"

[dependencies]
aurum_macros = { path = "src/macros" }
async-trait = "*"
crossbeam = "*"
im = { version = "*", features = ["serde"] }
itertools = "*"
linked-hash-map = "*"
maplit = "*"
num_cpus = "*"
num_enum = "*"
rand = { version = "*", features = ["alloc", "small_rng"] }
rpds = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive", "rc"] }
serde_cbor = "*"
smallvec = "*"
statrs = "*"
tokio = { version = "*", features = ["sync", "macros", "time", "net", "rt", "rt-multi-thread"] }
tokio-test = "*"
validator = "*"
wyhash = "*"