[package]
name = "aurum_actors_macros"
version = "0.0.1"
authors = ["Arjun Shukla <arjunlalshukla@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Procedural macros for aurum_actors."
readme = "README.md"
repository = "https://github.com/arjunlalshukla/aurum_actors"
keywords = ["distributed", "actor", "akka", "erlang"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
quote = "1.0"
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["parsing", "printing"]}