[package]
name = "interface-proc"
version = "0.1.0"
authors = ["Arjun Shukla <arjunlalshukla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
indoc = "1.0"
quote = "1.0"
syn = "1.0"