[package]
name = "aurum_macros"
version = "0.1.0"
authors = ["Arjun Shukla <arjunlalshukla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
quote = "1.0"
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["parsing"]}